src/snapshots/edb__tasklist__tests__view_several_tasks_at_eight_scroll.snap
---
source: src/tasklist.rs
expression: terminal.backend()
---
"┌Todo──────────────────────────────────────────────────────────────────────────┐"
"│                                                                              │"
"│  ┌────────────────────────────────────────────────────────────────────────┐  │"
"│  │Test 6                                                                  │  │"
"│  │                                                                        │  │"
"│  │                                                                        │  │"
"│  └────────────────────────────────────────────────────────────────────────┘  │"
"│  ┌────────────────────────────────────────────────────────────────────────┐  │"
"│  │Test 7                                                                  │  │"
"│  │                                                                        │  │"
"│  │                                                                        │  │"
"│  └────────────────────────────────────────────────────────────────────────┘  │"
"│  ┌────────────────────────────────────────────────────────────────────────┐  │"
"│  │Test 8                                                                  │  │"
"│  │                                                                        │  │"
"│  │                                                                        │  │"
"│  └────────────────────────────────────────────────────────────────────────┘  │"
"│  ┌────────────────────────────────────────────────────────────────────────┐  │"
"│  │Test 9                                                                  │  │"
"└──────────────────────────────────────────────────────────────────────────────┘"
