src/snapshots/edb__tasklist__tests__view_several_tasks_at_five_scroll.snap
---
source: src/tasklist.rs
expression: terminal.backend()
---
"┌Todo──────────────────────────────────────────────────────────────────────────┐"
"│                                                                             ▲│"
"│  ┌────────────────────────────────────────────────────────────────────────┐  │"
"│  │Test 3                                                                  │  │"
"│  │                                                                        │  │"
"│  │                                                                        │  │"
"│  └────────────────────────────────────────────────────────────────────────┘  │"
"│  ┌────────────────────────────────────────────────────────────────────────┐  │"
"│  │Test 4                                                                  │  │"
"│  │                                                                        │  │"
"│  │                                                                        │  │"
"│  └────────────────────────────────────────────────────────────────────────┘  │"
"│  ┌────────────────────────────────────────────────────────────────────────┐  │"
"│  │Test 5                                                                  │  │"
"│  │                                                                        │  │"
"│  │                                                                        │  │"
"│  └────────────────────────────────────────────────────────────────────────┘  │"
"│                                                                              │"
"│                                                                             ▼│"
"└──────────────────────────────────────────────────────────────────────────────┘"
