src/snapshots/edb__tasklist__tests__view_several_tasks_at_ten_scroll.snap
---
source: src/tasklist.rs
expression: terminal.backend()
---
"┌Todo──────────────────────────────────────────────────────────────────────────┐"
"│                                                                             ▲│"
"│  ┌────────────────────────────────────────────────────────────────────────┐  │"
"│  │Test 7                                                                  │  │"
"│  │                                                                        │  │"
"│  │                                                                        │  │"
"│  └────────────────────────────────────────────────────────────────────────┘  │"
"│  ┌────────────────────────────────────────────────────────────────────────┐  │"
"│  │Test 8                                                                  │  │"
"│  │                                                                        │  │"
"│  │                                                                        │  │"
"│  └────────────────────────────────────────────────────────────────────────┘  │"
"│  ┌────────────────────────────────────────────────────────────────────────┐  │"
"│  │Test 9                                                                  │  │"
"│  │                                                                        │  │"
"│  │                                                                        │  │"
"│  └────────────────────────────────────────────────────────────────────────┘  │"
"│                                                                              │"
"│                                                                              │"
"└──────────────────────────────────────────────────────────────────────────────┘"
