src/snapshots/edb__tasklist__tests__view_several_tasks_at_zero_scroll.snap
---
source: src/tasklist.rs
expression: terminal.backend()
---
"┌Todo──────────────────────────────────────────────────────────────────────────┐"
"│                                                                              │"
"│  ┌────────────────────────────────────────────────────────────────────────┐  │"
"│  │Test 1                                                                  │  │"
"│  │                                                                        │  │"
"│  │                                                                        │  │"
"│  └────────────────────────────────────────────────────────────────────────┘  │"
"│  ┌────────────────────────────────────────────────────────────────────────┐  │"
"│  │Test 2                                                                  │  │"
"│  │                                                                        │  │"
"│  │                                                                        │  │"
"│  └────────────────────────────────────────────────────────────────────────┘  │"
"│  ┌────────────────────────────────────────────────────────────────────────┐  │"
"│  │Test 3                                                                  │  │"
"│  │                                                                        │  │"
"│  │                                                                        │  │"
"│  └────────────────────────────────────────────────────────────────────────┘  │"
"│  ┌────────────────────────────────────────────────────────────────────────┐  │"
"│  │Test 4                                                                  │  │"
"└──────────────────────────────────────────────────────────────────────────────┘"
